--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
     }
   },
   "dependencies": {
-    "byte": "0.2.1",
-    "debug": "0.8.0",
-    "is-type-of": "0.0.2",
-    "long": "1.1.2",
-    "utility": "0.1.11"
+    "byte": "~0.3.1",
+    "debug": "~1.0.4",
+    "long": "~2.0.0",
+    "utility": "~1.0.0"
   },
   "devDependencies": {
     "autod": "*",
@@ -25,7 +24,7 @@
     "istanbul-harmony": "*",
     "jshint": "*",
     "mocha": "*",
-    "should": "3.2.0"
+    "should": "~4.0.4"
   },
   "homepage": "https://github.com/node-modules/java.io",
   "repository": {
