--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,11 @@
+sudo: false
 language: node_js
 node_js:
+  - '4'
+  - '3'
+  - '2'
+  - '1'
+  - '0.12'
   - '0.11'
   - '0.10'
 script: "npm run test-travis"
