--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 sudo: false
 language: node_js
 node_js:
+  - '6'
+  - '5'
   - '4'
   - '3'
   - '2'
@@ -8,5 +10,5 @@ node_js:
   - '0.12'
   - '0.11'
   - '0.10'
-script: "npm run test-travis"
-after_script: "npm install coveralls@2 && cat ./coverage/lcov.info | coveralls"
+script: 'npm run ci'
+after_script: 'npm i codecov && codecov'
