--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "Object Serialization Stream Protocol javascript implement",
   "main": "index.js",
   "scripts": {
-    "test": "mocha --check-leaks -R spec test/*.test.js",
-    "test-cov": "node node_modules/.bin/istanbul cover node_modules/.bin/_mocha -- --check-leaks test/*.test.js",
-    "test-travis": "node node_modules/.bin/istanbul cover node_modules/.bin/_mocha --report lcovonly -- --check-leaks test/*.test.js",
-    "jshint": "jshint .",
+    "test": "mocha -R spec test/*.test.js",
+    "test-cov": "istanbul cover _mocha -- test/*.test.js",
+    "lint": "jshint .",
+    "ci": "npm run test-cov",
     "autod": "autod -w --prefix '~'",
-    "cnpm": "npm install --registry=https://registry.npm.taobao.org",
     "contributors": "contributors -f plain -o AUTHORS"
   },
   "dependencies": {
